syntax = "proto3";

package messenger;

import "google/protobuf/empty.proto";
import "object.proto";

option go_package = "ecos/tide";

message ClusterStatus {
  enum Status {
    OFFLINE = 0;
    ONLINE = 1;
  }
  message Node {
    string UUID = 1;
    string IpAddr = 2;
    string StoragePath = 3;
    uint64 Capacity = 4;
    Status Status = 5;
  }
  repeated Node nodes = 1;
}

message Result {
  enum Status {
    SUCCESS = 0;
    PENDING = 1;
    FAIL = -1;
  }
  Status status = 1;
}

service NodeTide {
  rpc GetClusterStatus(google.protobuf.Empty) returns (ClusterStatus) {};
  rpc SendBlock(stream Block) returns (Result) {};
  rpc SendMetaData(ObjectInfo) returns (Result) {};
}